--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@teamhanko/hanko-elements": "^0.8.3",
-    "@teamhanko/hanko-frontend-sdk": "^0.8.3",
+    "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
